# drpin

./: License.txt  README.md  docker-start-drpin-dev.sh
drpin/: CMakeLists.txt  dockerfile  drpin.cpp  optionlist.cpp  options.cpp  options.h  pin.cpp
drpin/include/pin/: pin.H
drpin/scripts/: build_drpin.sh  build_drpin_tests.sh  build_dynamorio.sh  merge_compile_commands.sh  run_drpin_tests.sh  watcher.sh
executables/: drpin  drpin.sh
tests/: include
tests/app_examples/app1/: Makefile  app1.c
tests/app_examples/atomic_add/: atomic_add.c  compile.sh
tests/app_examples/det2/: compile.sh  det2.c
tests/app_examples/factorial/: compile.sh  factorial.c
tests/app_examples/hello_tiny/: compile.sh  hello.asm
tests/app_examples/longloop/: compile.sh  longloop.c
tests/app_examples/many_func/: many_func.c
tests/app_examples/math/: compile.sh  complex.c  complex.h  foo.c  math.c
tests/app_examples/memory_access/: compile.sh  memory_access.c
tests/app_examples/merge_sort/: compile.sh
tests/app_examples/merge_sort_musl/: compile.sh  merge_sort_musl.cpp
tests/app_examples/non_deterministic_multi_thread_musl/: compile.sh  non_deterministic_multi_thread_musl.c
tests/app_examples/sort/: compile.sh  (+1 more)
tests/scripts/: Makefile.drpin  clean_drpin.sh  compile_drpin.sh  pretty_print.sh  run_drpin.sh  run_drpin_atomic_add.sh  run_drpin_fac.sh  run_drpin_longloop.sh  run_drpin_many_func.sh  run_drpin_math.sh  run_drpin_memory_access.sh  run_drpin_merge_sort_musl.sh  run_drpin_sort.sh  run_drpin_tiny_c.sh  run_drpin_tiny_musl.sh  run_drpin_tiny_musl_with_args.sh
(+79 files in other folders)
